--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
